# Mistral-Voice-Clone

./: .env.example  .gitignore  CLAUDE.md  README.md  example_voices.env  pyproject.toml
docs/superpowers/plans/: 2026-05-21-voxtral-voice-cloning.md
docs/superpowers/specs/: 2026-05-21-voxtral-voice-cloning-design.md  2026-05-22-clone-from-local-clip-design.md
tests/: test_batch.py  test_cli.py  test_clipper.py  test_config.py  test_deps.py  test_downloader.py  test_registry.py  test_synth.py  test_voices.py
voxclone/: __init__.py  batch.py  cli.py  clipper.py  config.py  deps.py  downloader.py  registry.py  synth.py  voices.py
