[project]
name = "voxclone"
version = "0.1.0"
description = "Clone a voice from a YouTube video with Mistral Voxtral TTS"
requires-python = ">=3.10"
dependencies = [
    "mistralai>=2.0",
    "yt-dlp>=2024.1.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
voxclone = "voxclone.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voxclone*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
